--- a/EURS/📻_EU_Rap_Show___Home___EURapShow/📻_EU_Rap_Show___Home___EURapShow.html
+++ b/EURS/📻_EU_Rap_Show___Home___EURapShow/📻_EU_Rap_Show___Home___EURapShow.html
@@ -320,7 +320,7 @@ new Paste('widget4', '../Scripts/Widgets/HTMLRegion', '../Scripts/Widgets/Shared
 
 
           <div style="height: 54px; width: 54px;  height: 54px; left: 240px; position: absolute; top: 140px; width: 54px; z-index: 1; " class="tinyText style_SkipStroke_3 stroke_0">
-            <img src="%F0%9F%93%BB_EU_Rap_Show___Home___EURapShow_files/spotify-icon.png" alt="" style="border: none; height: 54px; width: 54px; " />
+            <a href="https://play.spotify.com/user/eurapshow" title="https://play.spotify.com/user/eurapshow"><img src="%F0%9F%93%BB_EU_Rap_Show___Home___EURapShow_files/spotify-icon.png" alt="" style="border: none; height: 54px; width: 54px; " /></a>
           </div>
           
 
