--- a/EURS/📻_EU_Rap_Show___About___EURapShow.html
+++ b/EURS/📻_EU_Rap_Show___About___EURapShow.html
@@ -271,7 +271,7 @@ new Paste('widget3', 'Scripts/Widgets/HTMLRegion', 'Scripts/Widgets/SharedResour
 
 
           <div style="height: 54px; width: 54px;  height: 54px; left: 240px; position: absolute; top: 140px; width: 54px; z-index: 1; " class="tinyText style_SkipStroke_1 stroke_0">
-            <img src="%F0%9F%93%BB_EU_Rap_Show___About___EURapShow_files/spotify-icon.png" alt="" style="border: none; height: 54px; width: 54px; " />
+            <a href="https://play.spotify.com/user/eurapshow" title="https://play.spotify.com/user/eurapshow"><img src="%F0%9F%93%BB_EU_Rap_Show___About___EURapShow_files/spotify-icon.png" alt="" style="border: none; height: 54px; width: 54px; " /></a>
           </div>
           
 
