--- a/EURS/📻_EU_Rap_Show___Contact___EURapShow.html
+++ b/EURS/📻_EU_Rap_Show___Contact___EURapShow.html
@@ -169,10 +169,10 @@ new Paste('widget2', 'Scripts/Widgets/HTMLRegion', 'Scripts/Widgets/SharedResour
           
 
 
-          <div id="id4" style="height: 57px; left: 70px; position: absolute; top: 290px; width: 1060px; z-index: 1; " class="style_SkipStroke_1 shape-with-text">
+          <div id="id4" style="height: 57px; left: 70px; position: absolute; top: 288px; width: 1060px; z-index: 1; " class="style_SkipStroke_2 shape-with-text">
             <div class="text-content graphic_textbox_layout_style_default_External_1060_57" style="padding: 0px; ">
               <div class="graphic_textbox_layout_style_default">
-                <p style="padding-bottom: 0pt; padding-top: 0pt; " class="paragraph_style_4"><a class="class1" title="📻_EU_Rap_Show___Home___EURapShow/📻_EU_Rap_Show___Home___EURapShow.html" href="%F0%9F%93%BB_EU_Rap_Show___Home___EURapShow/%F0%9F%93%BB_EU_Rap_Show___Home___EURapShow.html">HOME</a>    <a class="class2" title="📻_EU_Rap_Show___Episodes___EURapShow/📻_EU_Rap_Show___Episodes___EURapShow.html" href="%F0%9F%93%BB_EU_Rap_Show___Episodes___EURapShow/%F0%9F%93%BB_EU_Rap_Show___Episodes___EURapShow.html">EPISODES</a>    <a class="class3" title="📻_EU_Rap_Show___Playlist___EURapShow.html" href="%F0%9F%93%BB_EU_Rap_Show___Playlist___EURapShow.html">PLAYLIST</a>    LIVE    <a class="class4" title="" href="">CONTACT</a>    <a class="class5" title="📻_EU_Rap_Show___About___EURapShow.html" href="%F0%9F%93%BB_EU_Rap_Show___About___EURapShow.html">ABOUT</a></p>
+                <p style="padding-bottom: 0pt; padding-top: 0pt; " class="paragraph_style_4"><a class="class1" title="📻_EU_Rap_Show___Home___EURapShow/📻_EU_Rap_Show___Home___EURapShow.html" href="%F0%9F%93%BB_EU_Rap_Show___Home___EURapShow/%F0%9F%93%BB_EU_Rap_Show___Home___EURapShow.html">HOME</a>    <a class="class2" title="📻_EU_Rap_Show___Episodes___EURapShow/📻_EU_Rap_Show___Episodes___EURapShow.html" href="%F0%9F%93%BB_EU_Rap_Show___Episodes___EURapShow/%F0%9F%93%BB_EU_Rap_Show___Episodes___EURapShow.html">EPISODES</a>    <a class="class3" title="📻_EU_Rap_Show___Playlist___EURapShow.html" href="%F0%9F%93%BB_EU_Rap_Show___Playlist___EURapShow.html">PLAYLIST</a>    <a class="class4" title="📻_EU_Rap_Show___Live___EURapShow_2.html" href="%F0%9F%93%BB_EU_Rap_Show___Live___EURapShow_2.html">LIVE</a>    <a class="class5" title="" href="">CONTACT</a>    <a class="class6" title="📻_EU_Rap_Show___About___EURapShow.html" href="%F0%9F%93%BB_EU_Rap_Show___About___EURapShow.html">ABOUT</a></p>
               </div>
             </div>
           </div>
@@ -209,9 +209,9 @@ new Paste('widget2', 'Scripts/Widgets/HTMLRegion', 'Scripts/Widgets/SharedResour
             <div class="text-content graphic_textbox_layout_style_default_External_100_108" style="padding: 0px; ">
               <div class="graphic_textbox_layout_style_default">
                 <p style="padding-top: 0pt; " class="paragraph_style_6">NAVIGATION<span style="line-height: 24px; " class="style_1"><br /></span></p>
-                <p class="paragraph_style_7"><a class="class6" title="📻_EU_Rap_Show___Home___EURapShow/📻_EU_Rap_Show___Home___EURapShow.html" href="%F0%9F%93%BB_EU_Rap_Show___Home___EURapShow/%F0%9F%93%BB_EU_Rap_Show___Home___EURapShow.html">HOME</a><span style="line-height: 28px; " class="style_1"><br /></span></p>
-                <p class="paragraph_style_8"><a class="class7" title="📻_EU_Rap_Show___Episodes___EURapShow/📻_EU_Rap_Show___Episodes___EURapShow.html" href="%F0%9F%93%BB_EU_Rap_Show___Episodes___EURapShow/%F0%9F%93%BB_EU_Rap_Show___Episodes___EURapShow.html">EPISODES</a><span style="line-height: 28px; " class="style_1"><br /></span></p>
-                <p style="padding-bottom: 0pt; " class="paragraph_style_8"><a class="class8" title="📻_EU_Rap_Show___Playlist___EURapShow.html" href="%F0%9F%93%BB_EU_Rap_Show___Playlist___EURapShow.html">PLAYLIST</a></p>
+                <p class="paragraph_style_7"><a class="class7" title="📻_EU_Rap_Show___Home___EURapShow/📻_EU_Rap_Show___Home___EURapShow.html" href="%F0%9F%93%BB_EU_Rap_Show___Home___EURapShow/%F0%9F%93%BB_EU_Rap_Show___Home___EURapShow.html">HOME</a><span style="line-height: 28px; " class="style_1"><br /></span></p>
+                <p class="paragraph_style_8"><a class="class8" title="📻_EU_Rap_Show___Episodes___EURapShow/📻_EU_Rap_Show___Episodes___EURapShow.html" href="%F0%9F%93%BB_EU_Rap_Show___Episodes___EURapShow/%F0%9F%93%BB_EU_Rap_Show___Episodes___EURapShow.html">EPISODES</a><span style="line-height: 28px; " class="style_1"><br /></span></p>
+                <p style="padding-bottom: 0pt; " class="paragraph_style_8"><a class="class9" title="📻_EU_Rap_Show___Playlist___EURapShow.html" href="%F0%9F%93%BB_EU_Rap_Show___Playlist___EURapShow.html">PLAYLIST</a></p>
               </div>
             </div>
           </div>
@@ -235,9 +235,9 @@ new Paste('widget2', 'Scripts/Widgets/HTMLRegion', 'Scripts/Widgets/SharedResour
             <div class="text-content graphic_textbox_layout_style_default_External_253_165" style="padding: 0px; ">
               <div class="graphic_textbox_layout_style_default">
                 <p style="padding-top: 0pt; " class="paragraph_style_11">BE ON EU RAP SHOW<span style="line-height: 24px; " class="style_1"><br /></span></p>
-                <p class="paragraph_style_12"><a class="class9" title="" href="">APPEAR ON FREESTYLE SHOW</a><span style="line-height: 28px; " class="style_1"><br /></span></p>
-                <p class="paragraph_style_12"><a class="class10" title="" href="">SUBMIT YOUR BEAT</a><span style="line-height: 28px; " class="style_1"><br /></span></p>
-                <p style="padding-bottom: 0pt; " class="paragraph_style_12"><a class="class11" title="" href="">SUBMIT YOUR MIXTAPE</a></p>
+                <p class="paragraph_style_12"><a class="class10" title="" href="">APPEAR ON FREESTYLE SHOW</a><span style="line-height: 28px; " class="style_1"><br /></span></p>
+                <p class="paragraph_style_12"><a class="class11" title="" href="">SUBMIT YOUR BEAT</a><span style="line-height: 28px; " class="style_1"><br /></span></p>
+                <p style="padding-bottom: 0pt; " class="paragraph_style_12"><a class="class12" title="" href="">SUBMIT YOUR MIXTAPE</a></p>
               </div>
             </div>
           </div>
@@ -248,9 +248,9 @@ new Paste('widget2', 'Scripts/Widgets/HTMLRegion', 'Scripts/Widgets/SharedResour
             <div class="text-content graphic_textbox_layout_style_default_External_100_160" style="padding: 0px; ">
               <div class="graphic_textbox_layout_style_default">
                 <p style="padding-top: 0pt; " class="paragraph_style_11">OTHER LINKS<span style="line-height: 24px; " class="style_1"><br /></span></p>
-                <p class="paragraph_style_12"><a class="class12" title="📻_EU_Rap_Show___About___EURapShow.html" href="%F0%9F%93%BB_EU_Rap_Show___About___EURapShow.html">ABOUT</a><span style="line-height: 28px; " class="style_1"><br /></span></p>
-                <p class="paragraph_style_12"><a class="class13" title="" href="">ADVERTISE</a><span style="line-height: 28px; " class="style_1"><br /></span></p>
-                <p class="paragraph_style_12"><a class="class14" title="" href="">CONTACT</a><br /></p>
+                <p class="paragraph_style_12"><a class="class13" title="📻_EU_Rap_Show___About___EURapShow.html" href="%F0%9F%93%BB_EU_Rap_Show___About___EURapShow.html">ABOUT</a><span style="line-height: 28px; " class="style_1"><br /></span></p>
+                <p class="paragraph_style_12"><a class="class14" title="" href="">ADVERTISE</a><span style="line-height: 28px; " class="style_1"><br /></span></p>
+                <p class="paragraph_style_12"><a class="class15" title="" href="">CONTACT</a><br /></p>
                 <p class="paragraph_style_12"><span style="line-height: 28px; " class="style_1"><br /></span></p>
               </div>
             </div>
@@ -262,7 +262,7 @@ new Paste('widget2', 'Scripts/Widgets/HTMLRegion', 'Scripts/Widgets/SharedResour
             <div class="text-content graphic_textbox_layout_style_default_External_100_100" style="padding: 0px; ">
               <div class="graphic_textbox_layout_style_default">
                 <p style="padding-top: 0pt; " class="paragraph_style_11">CAREERS<span style="line-height: 24px; " class="style_1"><br /></span></p>
-                <p style="padding-bottom: 0pt; " class="paragraph_style_13">Click <a onclick="window.open(this.href); return false;" title="http://eastlondonradio.org.uk/?page_id=83" href="http://eastlondonradio.org.uk/?page_id=83" onkeypress="window.open(this.href); return false;" class="class15">here</a> to visit the East London Radio careers section</p>
+                <p style="padding-bottom: 0pt; " class="paragraph_style_13">Click <a onclick="window.open(this.href); return false;" title="http://eastlondonradio.org.uk/?page_id=83" href="http://eastlondonradio.org.uk/?page_id=83" onkeypress="window.open(this.href); return false;" class="class16">here</a> to visit the East London Radio careers section</p>
               </div>
             </div>
           </div>
