--- a/EURS/📻_EU_Rap_Show___Episodes___EURapShow/📻_EU_Rap_Show___Episodes___EURapShow.html
+++ b/EURS/📻_EU_Rap_Show___Episodes___EURapShow/📻_EU_Rap_Show___Episodes___EURapShow.html
@@ -244,10 +244,10 @@ new Paste('widget7', '../Scripts/Widgets/HTMLRegion', '../Scripts/Widgets/Shared
           
 
 
-          <div id="id11" style="height: 57px; left: 80px; position: absolute; top: 219px; width: 1060px; z-index: 1; " class="style_SkipStroke_4 shape-with-text">
+          <div id="id11" style="height: 57px; left: 80px; position: absolute; top: 219px; width: 1060px; z-index: 1; " class="style_SkipStroke_3 shape-with-text">
             <div class="text-content graphic_textbox_layout_style_default_External_1060_57" style="padding: 0px; ">
               <div class="graphic_textbox_layout_style_default">
-                <p style="padding-bottom: 0pt; padding-top: 0pt; " class="paragraph_style_4"><a class="class1" title="../📻_EU_Rap_Show___Home___EURapShow/📻_EU_Rap_Show___Home___EURapShow.html" href="../%F0%9F%93%BB_EU_Rap_Show___Home___EURapShow/%F0%9F%93%BB_EU_Rap_Show___Home___EURapShow.html">HOME</a>    <a class="class2" title="" href="">EPISODES</a>    <a class="class3" title="../📻_EU_Rap_Show___Playlist___EURapShow.html" href="../%F0%9F%93%BB_EU_Rap_Show___Playlist___EURapShow.html">PLAYLIST</a>    LIVE    <a class="class4" title="../📻_EU_Rap_Show___Contact___EURapShow.html" href="../%F0%9F%93%BB_EU_Rap_Show___Contact___EURapShow.html">CONTACT</a>    <a class="class5" title="../📻_EU_Rap_Show___About___EURapShow.html" href="../%F0%9F%93%BB_EU_Rap_Show___About___EURapShow.html">ABOUT</a></p>
+                <p style="padding-bottom: 0pt; padding-top: 0pt; " class="paragraph_style_4"><a class="class1" title="../📻_EU_Rap_Show___Home___EURapShow/📻_EU_Rap_Show___Home___EURapShow.html" href="../%F0%9F%93%BB_EU_Rap_Show___Home___EURapShow/%F0%9F%93%BB_EU_Rap_Show___Home___EURapShow.html">HOME</a>    <a class="class2" title="" href="">EPISODES</a>    <a class="class3" title="../📻_EU_Rap_Show___Playlist___EURapShow.html" href="../%F0%9F%93%BB_EU_Rap_Show___Playlist___EURapShow.html">PLAYLIST</a>    <a class="class4" title="../📻_EU_Rap_Show___Live___EURapShow_2.html" href="../%F0%9F%93%BB_EU_Rap_Show___Live___EURapShow_2.html">LIVE</a>    <a class="class5" title="../📻_EU_Rap_Show___Contact___EURapShow.html" href="../%F0%9F%93%BB_EU_Rap_Show___Contact___EURapShow.html">CONTACT</a>    <a class="class6" title="../📻_EU_Rap_Show___About___EURapShow.html" href="../%F0%9F%93%BB_EU_Rap_Show___About___EURapShow.html">ABOUT</a></p>
               </div>
             </div>
           </div>
@@ -255,7 +255,7 @@ new Paste('widget7', '../Scripts/Widgets/HTMLRegion', '../Scripts/Widgets/Shared
         </div>
         <div style="height: 306px; margin-left: 0px; position: relative; width: 1200px; z-index: 15; " id="footer_layer">
           <div style="height: 0px; line-height: 0px; " class="bumper"> </div>
-          <div id="id12" style="height: 332px; left: -39px; position: absolute; top: 10px; width: 1249px; z-index: 1; " class="style_SkipStroke_5 shape-with-text stroke_1">
+          <div id="id12" style="height: 332px; left: -39px; position: absolute; top: 10px; width: 1249px; z-index: 1; " class="style_SkipStroke_4 shape-with-text stroke_1">
             <div class="text-content graphic_shape_layout_style_default_External_1247_330" style="padding: 1px; ">
               <div class="graphic_shape_layout_style_default"></div>
             </div>
@@ -284,9 +284,9 @@ new Paste('widget7', '../Scripts/Widgets/HTMLRegion', '../Scripts/Widgets/Shared
             <div class="text-content graphic_textbox_layout_style_default_External_100_137" style="padding: 0px; ">
               <div class="graphic_textbox_layout_style_default">
                 <p style="padding-top: 0pt; " class="paragraph_style_6">NAVIGATION<span style="line-height: 24px; " class="style"><br /></span></p>
-                <p class="paragraph_style_7"><a class="class6" title="http://www.eurapshow.com/EU_Rap_Show/EU_Rap_Show___Home___EURapShow.html" href="http://www.eurapshow.com/EU_Rap_Show/EU_Rap_Show___Home___EURapShow.html">HOME</a><span style="line-height: 28px; " class="style"><br /></span></p>
-                <p class="paragraph_style_8"><a class="class7" title="http://livepage.apple.com/" href="http://livepage.apple.com/">EPISODES</a><span style="line-height: 28px; " class="style"><br /></span></p>
-                <p class="paragraph_style_8"><a class="class8" title="../📻_EU_Rap_Show___Playlist___EURapShow.html" href="../%F0%9F%93%BB_EU_Rap_Show___Playlist___EURapShow.html">PLAYLIST</a><span style="line-height: 28px; " class="style"><br /></span></p>
+                <p class="paragraph_style_7"><a class="class7" title="http://www.eurapshow.com/EU_Rap_Show/EU_Rap_Show___Home___EURapShow.html" href="http://www.eurapshow.com/EU_Rap_Show/EU_Rap_Show___Home___EURapShow.html">HOME</a><span style="line-height: 28px; " class="style"><br /></span></p>
+                <p class="paragraph_style_8"><a class="class8" title="http://livepage.apple.com/" href="http://livepage.apple.com/">EPISODES</a><span style="line-height: 28px; " class="style"><br /></span></p>
+                <p class="paragraph_style_8"><a class="class9" title="../📻_EU_Rap_Show___Playlist___EURapShow.html" href="../%F0%9F%93%BB_EU_Rap_Show___Playlist___EURapShow.html">PLAYLIST</a><span style="line-height: 28px; " class="style"><br /></span></p>
               </div>
             </div>
           </div>
@@ -311,9 +311,9 @@ new Paste('widget7', '../Scripts/Widgets/HTMLRegion', '../Scripts/Widgets/Shared
             <div class="text-content graphic_textbox_layout_style_default_External_253_165" style="padding: 0px; ">
               <div class="graphic_textbox_layout_style_default">
                 <p style="padding-top: 0pt; " class="paragraph_style_6">BE ON EU RAP SHOW<span style="line-height: 24px; " class="style"><br /></span></p>
-                <p class="paragraph_style_8"><a class="class9" title="../📻_EU_Rap_Show___Contact___EURapShow.html" href="../%F0%9F%93%BB_EU_Rap_Show___Contact___EURapShow.html">APPEAR ON FREESTYLE SHOW</a><span style="line-height: 28px; " class="style"><br /></span></p>
-                <p class="paragraph_style_8"><a class="class10" title="../📻_EU_Rap_Show___Contact___EURapShow.html" href="../%F0%9F%93%BB_EU_Rap_Show___Contact___EURapShow.html">SUBMIT YOUR BEAT</a><span style="line-height: 28px; " class="style"><br /></span></p>
-                <p style="padding-bottom: 0pt; " class="paragraph_style_8"><a class="class11" title="../📻_EU_Rap_Show___Contact___EURapShow.html" href="../%F0%9F%93%BB_EU_Rap_Show___Contact___EURapShow.html">SUBMIT YOUR MUSIC</a></p>
+                <p class="paragraph_style_8"><a class="class10" title="../📻_EU_Rap_Show___Contact___EURapShow.html" href="../%F0%9F%93%BB_EU_Rap_Show___Contact___EURapShow.html">APPEAR ON FREESTYLE SHOW</a><span style="line-height: 28px; " class="style"><br /></span></p>
+                <p class="paragraph_style_8"><a class="class11" title="../📻_EU_Rap_Show___Contact___EURapShow.html" href="../%F0%9F%93%BB_EU_Rap_Show___Contact___EURapShow.html">SUBMIT YOUR BEAT</a><span style="line-height: 28px; " class="style"><br /></span></p>
+                <p style="padding-bottom: 0pt; " class="paragraph_style_8"><a class="class12" title="../📻_EU_Rap_Show___Contact___EURapShow.html" href="../%F0%9F%93%BB_EU_Rap_Show___Contact___EURapShow.html">SUBMIT YOUR MUSIC</a></p>
               </div>
             </div>
           </div>
@@ -324,9 +324,9 @@ new Paste('widget7', '../Scripts/Widgets/HTMLRegion', '../Scripts/Widgets/Shared
             <div class="text-content graphic_textbox_layout_style_default_External_100_160" style="padding: 0px; ">
               <div class="graphic_textbox_layout_style_default">
                 <p style="padding-top: 0pt; " class="paragraph_style_6">OTHER LINKS<span style="line-height: 24px; " class="style"><br /></span></p>
-                <p class="paragraph_style_8"><a class="class12" title="../📻_EU_Rap_Show___About___EURapShow.html" href="../%F0%9F%93%BB_EU_Rap_Show___About___EURapShow.html">ABOUT</a><span style="line-height: 28px; " class="style"><br /></span></p>
-                <p class="paragraph_style_8"><a class="class13" title="../📻_EU_Rap_Show___Contact___EURapShow.html" href="../%F0%9F%93%BB_EU_Rap_Show___Contact___EURapShow.html">ADVERTISE</a><span style="line-height: 28px; " class="style"><br /></span></p>
-                <p class="paragraph_style_8"><a class="class14" title="../📻_EU_Rap_Show___Contact___EURapShow.html" href="../%F0%9F%93%BB_EU_Rap_Show___Contact___EURapShow.html">CONTACT</a><br /></p>
+                <p class="paragraph_style_8"><a class="class13" title="../📻_EU_Rap_Show___About___EURapShow.html" href="../%F0%9F%93%BB_EU_Rap_Show___About___EURapShow.html">ABOUT</a><span style="line-height: 28px; " class="style"><br /></span></p>
+                <p class="paragraph_style_8"><a class="class14" title="../📻_EU_Rap_Show___Contact___EURapShow.html" href="../%F0%9F%93%BB_EU_Rap_Show___Contact___EURapShow.html">ADVERTISE</a><span style="line-height: 28px; " class="style"><br /></span></p>
+                <p class="paragraph_style_8"><a class="class15" title="../📻_EU_Rap_Show___Contact___EURapShow.html" href="../%F0%9F%93%BB_EU_Rap_Show___Contact___EURapShow.html">CONTACT</a><br /></p>
                 <p class="paragraph_style_8"><span style="line-height: 28px; " class="style"><br /></span></p>
               </div>
             </div>
@@ -338,7 +338,7 @@ new Paste('widget7', '../Scripts/Widgets/HTMLRegion', '../Scripts/Widgets/Shared
             <div class="text-content graphic_textbox_layout_style_default_External_100_100" style="padding: 0px; ">
               <div class="graphic_textbox_layout_style_default">
                 <p style="padding-top: 0pt; " class="paragraph_style_6">CAREERS<span style="line-height: 24px; " class="style"><br /></span></p>
-                <p style="padding-bottom: 0pt; " class="paragraph_style_12">Click <a onclick="window.open(this.href); return false;" title="http://eastlondonradio.org.uk/?page_id=83" href="http://eastlondonradio.org.uk/?page_id=83" onkeypress="window.open(this.href); return false;" class="class15">here</a> to visit the East London Radio careers section</p>
+                <p style="padding-bottom: 0pt; " class="paragraph_style_12">Click <a onclick="window.open(this.href); return false;" title="http://eastlondonradio.org.uk/?page_id=83" href="http://eastlondonradio.org.uk/?page_id=83" onkeypress="window.open(this.href); return false;" class="class16">here</a> to visit the East London Radio careers section</p>
               </div>
             </div>
           </div>
