--- a/EURS/📻_EU_Rap_Show___Playlist___EURapShow.html
+++ b/EURS/📻_EU_Rap_Show___Playlist___EURapShow.html
@@ -479,10 +479,10 @@ new Paste('widget4', 'Scripts/Widgets/HTMLRegion', 'Scripts/Widgets/SharedResour
           <script type="text/javascript"><!--//--><![CDATA[//><!--
 new Paste('widget5', 'Scripts/Widgets/HTMLRegion', 'Scripts/Widgets/SharedResources', '.', {"emptyLook": false});
 //--><!]]></script>
-          <div id="id7" style="height: 57px; left: 70px; position: absolute; top: 209px; width: 1060px; z-index: 1; " class="style_SkipStroke_5 shape-with-text">
+          <div id="id7" style="height: 57px; left: 70px; position: absolute; top: 209px; width: 1060px; z-index: 1; " class="style_SkipStroke_3 shape-with-text">
             <div class="text-content graphic_textbox_layout_style_default_External_1060_57" style="padding: 0px; ">
               <div class="graphic_textbox_layout_style_default">
-                <p style="padding-bottom: 0pt; padding-top: 0pt; " class="paragraph_style_4"><a class="class1" title="📻_EU_Rap_Show___Home___EURapShow/📻_EU_Rap_Show___Home___EURapShow.html" href="%F0%9F%93%BB_EU_Rap_Show___Home___EURapShow/%F0%9F%93%BB_EU_Rap_Show___Home___EURapShow.html">HOME</a>    <a class="class2" title="📻_EU_Rap_Show___Episodes___EURapShow/📻_EU_Rap_Show___Episodes___EURapShow.html" href="%F0%9F%93%BB_EU_Rap_Show___Episodes___EURapShow/%F0%9F%93%BB_EU_Rap_Show___Episodes___EURapShow.html">EPISODES</a>    <a class="class3" title="" href="">PLAYLIST</a>    LIVE    <a class="class4" title="📻_EU_Rap_Show___Contact___EURapShow.html" href="%F0%9F%93%BB_EU_Rap_Show___Contact___EURapShow.html">CONTACT</a>    <a class="class5" title="📻_EU_Rap_Show___About___EURapShow.html" href="%F0%9F%93%BB_EU_Rap_Show___About___EURapShow.html">ABOUT</a></p>
+                <p style="padding-bottom: 0pt; padding-top: 0pt; " class="paragraph_style_4"><a class="class1" title="📻_EU_Rap_Show___Home___EURapShow/📻_EU_Rap_Show___Home___EURapShow.html" href="%F0%9F%93%BB_EU_Rap_Show___Home___EURapShow/%F0%9F%93%BB_EU_Rap_Show___Home___EURapShow.html">HOME</a>    <a class="class2" title="📻_EU_Rap_Show___Episodes___EURapShow/📻_EU_Rap_Show___Episodes___EURapShow.html" href="%F0%9F%93%BB_EU_Rap_Show___Episodes___EURapShow/%F0%9F%93%BB_EU_Rap_Show___Episodes___EURapShow.html">EPISODES</a>    <a class="class3" title="" href="">PLAYLIST</a>    <a class="class4" title="📻_EU_Rap_Show___Live___EURapShow_2.html" href="%F0%9F%93%BB_EU_Rap_Show___Live___EURapShow_2.html">LIVE</a>    <a class="class5" title="📻_EU_Rap_Show___Contact___EURapShow.html" href="%F0%9F%93%BB_EU_Rap_Show___Contact___EURapShow.html">CONTACT</a>    <a class="class6" title="📻_EU_Rap_Show___About___EURapShow.html" href="%F0%9F%93%BB_EU_Rap_Show___About___EURapShow.html">ABOUT</a></p>
               </div>
             </div>
           </div>
@@ -490,7 +490,7 @@ new Paste('widget5', 'Scripts/Widgets/HTMLRegion', 'Scripts/Widgets/SharedResour
         </div>
         <div style="height: 300px; margin-left: 0px; position: relative; width: 1200px; z-index: 15; " id="footer_layer">
           <div style="height: 0px; line-height: 0px; " class="bumper"> </div>
-          <div id="id8" style="height: 332px; left: -49px; position: absolute; top: 0px; width: 1249px; z-index: 1; " class="style_SkipStroke_6 shape-with-text stroke_1">
+          <div id="id8" style="height: 332px; left: -49px; position: absolute; top: 0px; width: 1249px; z-index: 1; " class="style_SkipStroke_5 shape-with-text stroke_1">
             <div class="text-content graphic_shape_layout_style_default_External_1247_330" style="padding: 1px; ">
               <div class="graphic_shape_layout_style_default"></div>
             </div>
@@ -519,9 +519,9 @@ new Paste('widget5', 'Scripts/Widgets/HTMLRegion', 'Scripts/Widgets/SharedResour
             <div class="text-content graphic_textbox_layout_style_default_External_100_137" style="padding: 0px; ">
               <div class="graphic_textbox_layout_style_default">
                 <p style="padding-top: 0pt; " class="paragraph_style_6">NAVIGATION<span style="line-height: 24px; " class="style_1"><br /></span></p>
-                <p class="paragraph_style_7"><a class="class6" title="📻_EU_Rap_Show___Home___EURapShow/📻_EU_Rap_Show___Home___EURapShow.html" href="%F0%9F%93%BB_EU_Rap_Show___Home___EURapShow/%F0%9F%93%BB_EU_Rap_Show___Home___EURapShow.html">HOME</a><span style="line-height: 28px; " class="style_1"><br /></span></p>
-                <p class="paragraph_style_8"><a class="class7" title="📻_EU_Rap_Show___Episodes___EURapShow/📻_EU_Rap_Show___Episodes___EURapShow.html" href="%F0%9F%93%BB_EU_Rap_Show___Episodes___EURapShow/%F0%9F%93%BB_EU_Rap_Show___Episodes___EURapShow.html">EPISODES</a><span style="line-height: 28px; " class="style_1"><br /></span></p>
-                <p class="paragraph_style_8"><a class="class8" title="" href="">PLAYLIST</a><span style="line-height: 28px; " class="style_1"><br /></span></p>
+                <p class="paragraph_style_7"><a class="class7" title="📻_EU_Rap_Show___Home___EURapShow/📻_EU_Rap_Show___Home___EURapShow.html" href="%F0%9F%93%BB_EU_Rap_Show___Home___EURapShow/%F0%9F%93%BB_EU_Rap_Show___Home___EURapShow.html">HOME</a><span style="line-height: 28px; " class="style_1"><br /></span></p>
+                <p class="paragraph_style_8"><a class="class8" title="📻_EU_Rap_Show___Episodes___EURapShow/📻_EU_Rap_Show___Episodes___EURapShow.html" href="%F0%9F%93%BB_EU_Rap_Show___Episodes___EURapShow/%F0%9F%93%BB_EU_Rap_Show___Episodes___EURapShow.html">EPISODES</a><span style="line-height: 28px; " class="style_1"><br /></span></p>
+                <p class="paragraph_style_8"><a class="class9" title="" href="">PLAYLIST</a><span style="line-height: 28px; " class="style_1"><br /></span></p>
               </div>
             </div>
           </div>
@@ -546,9 +546,9 @@ new Paste('widget5', 'Scripts/Widgets/HTMLRegion', 'Scripts/Widgets/SharedResour
             <div class="text-content graphic_textbox_layout_style_default_External_253_165" style="padding: 0px; ">
               <div class="graphic_textbox_layout_style_default">
                 <p style="padding-top: 0pt; " class="paragraph_style_6">BE ON EU RAP SHOW<span style="line-height: 24px; " class="style_1"><br /></span></p>
-                <p class="paragraph_style_8"><a class="class9" title="📻_EU_Rap_Show___Contact___EURapShow.html" href="%F0%9F%93%BB_EU_Rap_Show___Contact___EURapShow.html">APPEAR ON FREESTYLE SHOW</a><span style="line-height: 28px; " class="style_1"><br /></span></p>
-                <p class="paragraph_style_8"><a class="class10" title="📻_EU_Rap_Show___Contact___EURapShow.html" href="%F0%9F%93%BB_EU_Rap_Show___Contact___EURapShow.html">SUBMIT YOUR BEAT</a><span style="line-height: 28px; " class="style_1"><br /></span></p>
-                <p style="padding-bottom: 0pt; " class="paragraph_style_8"><a class="class11" title="📻_EU_Rap_Show___Contact___EURapShow.html" href="%F0%9F%93%BB_EU_Rap_Show___Contact___EURapShow.html">SUBMIT YOUR MUSIC</a></p>
+                <p class="paragraph_style_8"><a class="class10" title="📻_EU_Rap_Show___Contact___EURapShow.html" href="%F0%9F%93%BB_EU_Rap_Show___Contact___EURapShow.html">APPEAR ON FREESTYLE SHOW</a><span style="line-height: 28px; " class="style_1"><br /></span></p>
+                <p class="paragraph_style_8"><a class="class11" title="📻_EU_Rap_Show___Contact___EURapShow.html" href="%F0%9F%93%BB_EU_Rap_Show___Contact___EURapShow.html">SUBMIT YOUR BEAT</a><span style="line-height: 28px; " class="style_1"><br /></span></p>
+                <p style="padding-bottom: 0pt; " class="paragraph_style_8"><a class="class12" title="📻_EU_Rap_Show___Contact___EURapShow.html" href="%F0%9F%93%BB_EU_Rap_Show___Contact___EURapShow.html">SUBMIT YOUR MUSIC</a></p>
               </div>
             </div>
           </div>
@@ -559,9 +559,9 @@ new Paste('widget5', 'Scripts/Widgets/HTMLRegion', 'Scripts/Widgets/SharedResour
             <div class="text-content graphic_textbox_layout_style_default_External_100_160" style="padding: 0px; ">
               <div class="graphic_textbox_layout_style_default">
                 <p style="padding-top: 0pt; " class="paragraph_style_6">OTHER LINKS<span style="line-height: 24px; " class="style_1"><br /></span></p>
-                <p class="paragraph_style_8"><a class="class12" title="📻_EU_Rap_Show___About___EURapShow.html" href="%F0%9F%93%BB_EU_Rap_Show___About___EURapShow.html">ABOUT</a><span style="line-height: 28px; " class="style_1"><br /></span></p>
-                <p class="paragraph_style_8"><a class="class13" title="📻_EU_Rap_Show___Contact___EURapShow.html" href="%F0%9F%93%BB_EU_Rap_Show___Contact___EURapShow.html">ADVERTISE</a><span style="line-height: 28px; " class="style_1"><br /></span></p>
-                <p class="paragraph_style_8"><a class="class14" title="📻_EU_Rap_Show___Contact___EURapShow.html" href="%F0%9F%93%BB_EU_Rap_Show___Contact___EURapShow.html">CONTACT</a><br /></p>
+                <p class="paragraph_style_8"><a class="class13" title="📻_EU_Rap_Show___About___EURapShow.html" href="%F0%9F%93%BB_EU_Rap_Show___About___EURapShow.html">ABOUT</a><span style="line-height: 28px; " class="style_1"><br /></span></p>
+                <p class="paragraph_style_8"><a class="class14" title="📻_EU_Rap_Show___Contact___EURapShow.html" href="%F0%9F%93%BB_EU_Rap_Show___Contact___EURapShow.html">ADVERTISE</a><span style="line-height: 28px; " class="style_1"><br /></span></p>
+                <p class="paragraph_style_8"><a class="class15" title="📻_EU_Rap_Show___Contact___EURapShow.html" href="%F0%9F%93%BB_EU_Rap_Show___Contact___EURapShow.html">CONTACT</a><br /></p>
                 <p class="paragraph_style_8"><span style="line-height: 28px; " class="style_1"><br /></span></p>
               </div>
             </div>
@@ -573,7 +573,7 @@ new Paste('widget5', 'Scripts/Widgets/HTMLRegion', 'Scripts/Widgets/SharedResour
             <div class="text-content graphic_textbox_layout_style_default_External_100_100" style="padding: 0px; ">
               <div class="graphic_textbox_layout_style_default">
                 <p style="padding-top: 0pt; " class="paragraph_style_6">CAREERS<span style="line-height: 24px; " class="style_1"><br /></span></p>
-                <p style="padding-bottom: 0pt; " class="paragraph_style_12">Click <a onclick="window.open(this.href); return false;" title="http://eastlondonradio.org.uk/?page_id=83" href="http://eastlondonradio.org.uk/?page_id=83" onkeypress="window.open(this.href); return false;" class="class15">here</a> to visit the East London Radio careers section</p>
+                <p style="padding-bottom: 0pt; " class="paragraph_style_12">Click <a onclick="window.open(this.href); return false;" title="http://eastlondonradio.org.uk/?page_id=83" href="http://eastlondonradio.org.uk/?page_id=83" onkeypress="window.open(this.href); return false;" class="class16">here</a> to visit the East London Radio careers section</p>
               </div>
             </div>
           </div>
