--- a/EURS/📻_EU_Rap_Show___About___EURapShow.html
+++ b/EURS/📻_EU_Rap_Show___About___EURapShow.html
@@ -161,6 +161,15 @@ new Paste('widget3', 'Scripts/Widgets/HTMLRegion', 'Scripts/Widgets/SharedResour
               </div>
             </div>
           </div>
+          <div class="com-apple-iweb-widget-HTMLRegion" id="widget4" style="height: 223px; left: 178px; opacity: 1.00; position: absolute; top: 967px; width: 428px; z-index: 1; ">
+            <script type="text/javascript"><!--//--><![CDATA[//><!--
+    var widget4_htmlMarkupURL = ".//%F0%9F%93%BB_EU_Rap_Show___About___EURapShow_files/widget4_markup.html";
+//--><!]]></script>
+            <div id="widget4-htmlRegion" class="html_region_widget"></div>
+          </div>
+          <script type="text/javascript"><!--//--><![CDATA[//><!--
+new Paste('widget4', 'Scripts/Widgets/HTMLRegion', 'Scripts/Widgets/SharedResources', '.', {"emptyLook": false});
+//--><!]]></script>
           <div style="height: 1200px; line-height: 1200px; " class="spacer"> </div>
         </div>
         <div style="height: 300px; margin-left: 0px; position: relative; width: 1200px; z-index: 15; " id="footer_layer">
